Update app name
Test: rebuild
Change-Id: I3f5d3152c6752953988bd8c0d9e1317dcb91888e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="add_virtual_keyboard">Manage keyboards</string>
 
     <!-- App name of SettingsIntelligence [CHAR_LIMIT=30] -->
-    <string name="app_name_settings_intelligence">Settings Intelligence</string>
+    <string name="app_name_settings_intelligence">Settings Suggest</string>
 
     <!-- SEARCH STRINGS -->
 
