--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="add_virtual_keyboard">Manage keyboards</string>
 
     <!-- App name of SettingsIntelligence [CHAR_LIMIT=30] -->
-    <string name="app_name_settings_intelligence">Settings Suggest</string>
+    <string name="app_name_settings_intelligence">Settings Suggestions</string>
 
     <!-- SEARCH STRINGS -->
 
