Wip - settings intelligence
Change-Id: I05aa4fd7b29a68e33999107fad2a4f8b7d91f3cf

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,4 +45,5 @@
     </string>
 
     <string name="search_no_results">No results</string>
+    <string name="search_hint_text">Search settings</string>
 </resources>
